fix(linear-progress): gap between label and track

--- a/src/components/progress/themes/linear/shared/linear.progress.indigo.scss
+++ b/src/components/progress/themes/linear/shared/linear.progress.indigo.scss
@@ -7,8 +7,20 @@ $theme: $indigo;
 $stripe-size: rem(6px);
 $stripe-space: rem(14px);
 
-:host {
-    gap: rem(4px);
+:host([label-align='top']),
+:host([label-align='top-start']),
+:host([label-align='top-end']) {
+    [part~='track'] {
+        margin-block-start: rem(4px);
+    }
+}
+
+:host([label-align='bottom']),
+:host([label-align='bottom-start']),
+:host([label-align='bottom-end']) {
+    [part~='track'] {
+        margin-block-end: rem(4px);
+    }
 }
 
 [part~='value'] {
